--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.90",
     "@mui/material": "^5.9.0",
+    "@mui/x-data-grid": "^5.15.1",
     "cookie": "^0.5.0",
     "cookies-next": "^2.1.1",
     "next": "12.2.2",
