--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/x-data-grid": "^5.15.1",
     "cookie": "^0.5.0",
     "cookies-next": "^2.1.1",
+    "framer-motion": "^7.2.0",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
