--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookies-next": "^2.1.1",
     "framer-motion": "^7.2.0",
     "next": "12.2.2",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "simplebar-react": "^2.4.1",
