--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/lab": "^5.0.0-alpha.90",
     "@mui/material": "^5.9.0",
     "@mui/x-data-grid": "^5.15.1",
+    "bun-framework-next": "^12.2.4",
     "cookie": "^0.5.0",
     "cookies-next": "^2.1.1",
     "framer-motion": "^7.2.0",
