--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "bun-framework-next": "^12.2.4",
     "cookie": "^0.5.0",
     "cookies-next": "^2.1.1",
+    "date-fns": "^2.29.2",
     "framer-motion": "^7.2.0",
     "next": "12.2.2",
     "next-pwa": "^5.6.0",
+    "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "simplebar-react": "^2.4.1",
@@ -28,7 +30,9 @@
   },
   "devDependencies": {
     "@types/cookie": "^0.5.1",
+    "@types/date-fns": "^2.6.0",
     "@types/node": "18.0.5",
+    "@types/numeral": "^2.0.2",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "eslint": "8.20.0",
