--- a/package.json
+++ b/package.json
@@ -16,15 +16,12 @@
     "@mui/material": "^5.9.0",
     "@mui/x-data-grid": "^5.15.1",
     "@next-auth/prisma-adapter": "^1.0.4",
-    "@prisma/client": "^4.3.1",
-    "bun-framework-next": "^12.2.4",
-    "cookie": "^0.5.0",
-    "cookies-next": "^2.1.1",
+    "crypto": "^1.0.1",
     "date-fns": "^2.29.2",
     "firebase": "^9.9.4",
     "framer-motion": "^7.2.0",
+    "iron-session": "^6.2.1",
     "next": "12.2.2",
-    "next-auth": "^4.10.3",
     "next-pwa": "^5.6.0",
     "numeral": "^2.0.6",
     "react": "18.2.0",
@@ -33,17 +30,14 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
-    "@types/cookie": "^0.5.1",
     "@types/date-fns": "^2.6.0",
     "@types/firebase": "^3.2.1",
-    "@types/next-auth": "^3.15.0",
     "@types/node": "18.0.5",
     "@types/numeral": "^2.0.2",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2",
-    "prisma": "^4.3.1",
     "typescript": "^4.7.4"
   }
 }
