--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^12.3.1",
     "@types/date-fns": "^2.6.0",
     "@types/firebase": "^3.2.1",
     "@types/node": "18.0.5",
