--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.9.0",
     "@mui/x-data-grid": "^5.15.1",
     "@next-auth/prisma-adapter": "^1.0.4",
+    "cookies-next": "^2.1.1",
     "crypto": "^1.0.1",
     "date-fns": "^2.29.2",
     "firebase": "^9.9.4",
