--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,22 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": ["src/components/*"],
+      "@utils/*": ["src/utils/*"],
+      "@views/*": ["src/views/*"],
+      "@backend/*": ["src/backend/*"],
+      "@lib/*": ["src/lib/*"],
+      "@provider/*": ["src/provider/*"],
+      "@hooks/*": ["src/hooks/*"],
+      "@schema/*": ["src/schema/*"],
+      "@service/*": ["src/service/*"],
+      "@template/*": ["src/template/*"],
+      "@theme/*": ["src/theme/*"],
+      "@general-types/*": ["src/types/*"]
+    }
   },
   "include": [
     "next-env.d.ts",
