renaming things to english

--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ DATABASE_URL="postigresql://johndoe:randompassword@localhost:5432/mydb?schema=pu
 
 COOKIE_PASS="N9cRmJNjchUYqRhisQYL123qwertyu"
 COOKIE_NAME="session"
+SENDGRID_API_KEY= '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'
+API_BASE_URL= 'https://xmbi-4bje-h8wi.s2.xano.io/api'
