--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "iron-session": "^6.2.1",
     "next": "12.2.2",
     "next-pwa": "^5.6.0",
+    "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^12.3.1",
     "@types/date-fns": "^2.6.0",
+    "@types/nprogress": "^0.2.0",
     "@types/firebase": "^3.2.1",
     "@types/node": "18.0.5",
     "@types/numeral": "^2.0.2",
