fix: PWA enabled

--- a/.env
+++ b/.env
@@ -10,3 +10,7 @@ COOKIE_PASS="N9cRmJNjchUYqRhisQYL123qwertyu"
 COOKIE_NAME="session"
 SENDGRID_API_KEY= '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'
 API_BASE_URL= 'https://xmbi-4bje-h8wi.s2.xano.io/api'
+
+UPLOAD_IO_ACCOUNT_ID= '12a1xrf'
+UPLOAD_IO_URL= 'https://api.upload.io/v2'
+UPLOAD_IO_API_KEY='public_12a1xrfCHjTw25ewUuvsNmdAGxny'
