--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.31.1",
     "simplebar-react": "^2.4.1",
     "swr": "^1.3.0"
   },
